# grid07-ai-assignment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: .env.example  render.yaml
backend/app/: database.py  main.py  models.py  schemas.py  seed_data.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/colleges/[id]/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/predictor/: page.tsx
frontend/components/: CollegeListClient.tsx  CompareClient.tsx  PredictorClient.tsx  api.ts
src/grid07_ai/: combat.py  content_graph.py  demo.py  embeddings.py  llm.py  mock_search.py  personas.py  router.py
